Text changes applied

--- a/templates/comment.html
+++ b/templates/comment.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% block title %}Create New Short URL{% endblock %}
+{% block title %}Create New Comment{% endblock %}
 {% block body %}
 
     <form action="" method=post>
