--- a/templates/create_add.html
+++ b/templates/create_add.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
-{% block title %}Create New Short URL{% endblock %}
+{% block title %}Create New Advertise{% endblock %}
 {% block body %}
-  <h2>Submit URL</h2>
+  <h2>Submit Adv</h2>
   <form action="" method=post>
     {% if error %}
       <p class=error><strong>Error:</strong> {{ error }}
