--- a/templates/details.html
+++ b/templates/details.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% block title %}Create New Short URL{% endblock %}
+{% block title %}Wiew details {% endblock %}
 {% block body %}
 
 
