--- a/templates/main.html
+++ b/templates/main.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% block title %}Create New Short URL{% endblock %}
+{% block title %}Free Ads{% endblock %}
 {% block body %}
   <h2>Main page</h2>
   <form action="/create_add" method=get>
